demo 3 tdd